minimap fixes